--- a/src/stylesheets/components/Card.scss
+++ b/src/stylesheets/components/Card.scss
@@ -10,12 +10,12 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    background-color: #dbf1d1;
+    background-color: #040505;
     border-radius: 10px;
-    border: 3px solid #fefd7c;
+    border: 4px solid #04f3f3;
     padding: 10px 0px;
     &Img {
-      width: 90%;
+      width: 85%;
     }
     &Name {
       text-align: center;
