--- a/src/stylesheets/components/CardDetail.scss
+++ b/src/stylesheets/components/CardDetail.scss
@@ -1,6 +1,6 @@
 .main__detail {
   height: auto;
-  background-color: aquamarine;
+  background-color:#04f3f3;
   margin: 40px 0px 5px 0px;
   display: grid;
   grid-template-columns: 1fr;
