--- a/src/stylesheets/components/Filter.scss
+++ b/src/stylesheets/components/Filter.scss
@@ -6,7 +6,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #f8c2f3;
+    background-color: #04f3f3;
     height: auto;
     border-radius: 10px;
     margin: 50px 0px 50px 0px;
@@ -31,9 +31,8 @@
       margin: 10px;
       padding: 0px 5px;
       outline-color: #028b7b;
-      border: 2px dotted #028b7b;
+      border: 2px solid #028b7b;
       color: #028b7b;
-      background-color: #fefd7c;
     }
     
   }
