--- a/src/stylesheets/components/Index.scss
+++ b/src/stylesheets/components/Index.scss
@@ -3,12 +3,12 @@
   padding: 0px;
   box-sizing: border-box;
   list-style-type: none;
-  font-family: "Architects Daughter", cursive;
+  font-family: 'Permanent Marker', cursive;
   text-decoration: none;
 }
 
 body {
-  background-image: url("../../images/background2.png");
+  background-image: url("../../images/background3.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
